<resources>
    <string name="app_name">Ridevise Restaurant</string>
    <string name="login_text">Please <b>Login</b> to \nmanage your activities</string>
    <string name="mobile_no">Mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="copyright">@Copyright RideWise</string>
    <string name="today_order">Today\'s Orders</string>
    <string name="add">Add</string>
    <string name="no_order">It seems you have not added any \norders for today... \n\nYour orders will appear here.\n\nTap the add button for new order...</string>
    <string name="add_customer_text1">It seems the customer you \nhave searched is not in our list... \n\nTap the button to add new customer...</string>
    <string name="add_customer_text2">Tap the button \nto add new customer...</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_orders">Add Orders</string>
    <string name="customer_details">Customer Details</string>
    <string name="customer_name">Customer name</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="pin_number">Pin number</string>
    <string name="order_details">Order Details</string>
    <string name="order_status">Order Status</string>
    <string name="item_details">Item details</string>
    <string name="item_qty">Item Quantity</string>
    <string name="amount">₹ Amount</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="total_amount">₹ Total Amount</string>
    <string name="check_if">Check if paid</string>
    <string name="place_order">Place Order</string>
    <string name="customer">Customer</string>
    <string name="search_customer">Search Customer</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="next">Next</string>
    <string name="or">Or</string>
    <string name="select">Select</string>
    <string name="all">All</string>
    <string name="veg">Veg</string>
    <string name="nonveg">NonVeg</string>
    <string name="search_item">Search Item</string>
    <string name="view_cart">View Cart</string>
    <string name="cart">Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_payable">Total Payable</string>
    <string name="tax">Tax and Charges</string>
    <string name="checkout">Checkout</string>
    <string name="payment">Payment</string>
    <string name="select_mode">Select Payment Mode</string>
    <string name="cod">COD</string>
    <string name="online_payment">Online payment</string>
    <string name="profile">Profile</string>
    <string name="sample_address1">Chowman,</string>
    <string name="sample_address2"> Manton, Behala</string>
    <string name="sample_address3">Casual Dining - Chinese, Asian, Thai\nOriental, Seafood, Deserts, Beverages</string>
    <string name="profile_info">Profile Info</string>
    <string name="manage_address">Manage Address</string>
    <string name="manage_menu">Manage Menu</string>
    <string name="menu">Menu List</string>
    <string name="order_history">Order History</string>
    <string name="notification">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="contact_person">Contact person</string>
    <string name="location">Location</string>
    <string name="full_address">Full address</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="save">Save</string>
    <string name="f_pass">Forgot Password</string>
    <string name="text_f_pass">We will send OTP to registered\nmobile number to reset password</string>
    <string name="enter_registered_phn">Enter registered mobile no</string>
    <string name="back_to_login">Back to Login</string>
    <string name="submit">Submit</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="not_received">Not Received?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="set_password">Set Password</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="view_details">View Details</string>
    <string name="add_menu">Add Menu</string>
    <string name="menu_name">Menu name</string>
    <string name="select_cat">Select category</string>
    <string name="description">Description</string>
    <string name="prep_time">Preparation time</string>
    <string name="price">Price</string>
    <string name="delivered">Delivered</string>

    <string name="default_notification_channel_id">Default</string>
    <string name="default_notification_channel_name">Default channel</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
</resources>