<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@color/dark_green">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"

            />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:layout_toEndOf="@+id/iv_back"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"

            android:padding="@dimen/_5sdp"/>



    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginEnd="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/total_payable"
                android:textSize="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/tv_total_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textSize="@dimen/_14sdp"/>



        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="0.5dp"
            android:background="@color/grey_border"

            />

        <TextView
            android:id="@+id/tv_select_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/select_mode"
            android:textSize="@dimen/_14sdp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            >

            <RadioButton
                android:id="@+id/rb_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cod"
                android:buttonTint="@color/black"
                android:textSize="@dimen/_12sdp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_online_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online_payment"
                android:visibility="gone"
                android:buttonTint="@color/black"
                android:textSize="@dimen/_12sdp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/tv_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/place_order"
            android:textAllCaps="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:background="@drawable/tv_bg_green"
            android:textSize="@dimen/_12sdp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header"
        android:visibility="gone"
        android:background="@color/opacity_light_grey">


        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/d_grey" />
    </RelativeLayout>
</RelativeLayout>