<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_screen">

    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:background="@color/dark_green">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back"
            android:layout_centerVertical="true"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_5sdp"

            />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:text="@string/add_menu"
            android:layout_toEndOf="@+id/iv_back"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:padding="@dimen/_5sdp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_menu_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:gravity="start"
                android:textColor="@color/black"
                android:background="@drawable/et_bg_white"
                android:hint="@string/menu_name"
                android:textSize="@dimen/_12sdp"/>
            <TextView
                android:id="@+id/tv_select_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:background="@drawable/et_bg_white"
                android:drawableEnd="@mipmap/dropdown"
                android:hint="@string/select_cat"
                android:textSize="@dimen/_12sdp"/>
            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:padding="@dimen/_10sdp"
                android:gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:background="@drawable/et_bg_white"
                android:hint="@string/description"
                android:textSize="@dimen/_12sdp"/>
            <EditText
                android:id="@+id/et_prep_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:gravity="start"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:background="@drawable/et_bg_white"
                android:hint="@string/prep_time"
                android:textSize="@dimen/_12sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/et_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:gravity="start"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:background="@drawable/et_bg_white"
                        android:hint="@string/price"
                        android:textSize="@dimen/_12sdp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_150sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_10sdp"
                        android:background="@drawable/et_bg_white">

                            <ImageView
                                android:id="@+id/iv_profile"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@mipmap/camera"
                                android:scaleType="centerInside"

                                />

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_compat1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Veg   "
                        android:enabled="true"
                        android:textSize="@dimen/_14sdp"
                        android:buttonTint="@color/dark_green"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_compat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:textOff="@string/nonveg"
                        android:textOn="@string/veg"
                        android:visibility="gone"
                        android:scaleX="2.5"
                        android:scaleY="1"
                        android:layout_centerInParent="true"
                        app:track="@drawable/switch_on_off"
                        android:thumb="@mipmap/thumb"/>


                </RelativeLayout>

            </LinearLayout>



            <TextView
                android:id="@+id/tv_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/save"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:background="@drawable/tv_bg_green"
                android:textSize="@dimen/_12sdp"/>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header"
        android:visibility="gone"
        android:background="@color/opacity_light_grey">


        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            app:SpinKit_Color="@color/d_grey" />
    </RelativeLayout>

</RelativeLayout>